# INNOMA

./: .gitignore  CLAUDE.md  CNAME  README.md  package-lock.json  plan.md
apps/crawler/firecrowl/: .env  .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  firecrawl_sample.py  firecrawl_scraper.py  main.py  pyproject.toml  requirements.txt  test_ocr.py  test_ocr_with_image.py  website_crawler.py
apps/crawler/firecrowl/examples/: basic_usage.py  batch_processing.py
apps/crawler/firecrowl/outputs/html/: httpbin.org_20250625_205221_28f3848e.html  httpbin.org_20250625_211341_28f3848e.html  toyama_fixed.html  toyama_ocr_test.html  toyama_structured.html  toyama_with_ocr.html  u-toyama.ac.jp_20250625_205729_763b84e6.html
apps/crawler/firecrowl/outputs/json/: httpbin.org_20250625_205221_28f3848e.json  httpbin.org_20250625_211341_28f3848e.json  toyama_fixed.json  toyama_ocr_test.json  toyama_structured.json  toyama_with_ocr.json  u-toyama.ac.jp_20250625_205729_763b84e6.json
apps/crawler/firecrowl/outputs/markdown/: httpbin.org_20250625_205221_28f3848e.md  httpbin.org_20250625_211341_28f3848e.md  toyama_fixed.md  toyama_ocr_test.md  toyama_structured.md  toyama_with_ocr.md  u-toyama.ac.jp_20250625_205729_763b84e6.md
apps/crawler/firecrowl/outputs/structured/: toyama_ocr_test.csv  toyama_structured.csv  toyama_with_ocr.csv
apps/crawler/firecrowl/src/: __init__.py  data_models.py  image_processor.py  output_manager.py  text_processor.py  web_scraper.py
apps/crawler/firecrowl/website_crawler/: __init__.py  cli.py  config.py
apps/crawler/firecrowl/website_crawler/core/: __init__.py  multi_crawler.py  ocr.py  processor.py  scraper.py  sitemap.py
apps/crawler/firecrowl/website_crawler/models/: __init__.py  data_models.py  schemas.py
apps/crawler/firecrowl/website_crawler/utils/: __init__.py  logging.py
docs/: ADMIN_PANEL_SPEC.md  API_REFERENCE.md  COMPONENT_SELECTION_LOGIC.md  DADS_COMPONENTS.md  DATA_STRUCTURES.md  DISTRICT_DEPENDENT_VARIABLES.md  HIGASHIYOSHINO_VARIABLE_REPORT.md  IMPLEMENTATION_PLAN.md  INNOMA_FlowChart.md  KITAGAWA_VARIABLE_REPORT.md  LLM_FETCHER_SPEC.md  MUNICIPALITY_VARIABLE_REPORT.md  OTAKI_VARIABLE_REPORT.md  PROJECT.md  README.md  REQUIREMENTS.md  TAXONOMY_OVERVIEW.md  TEMPLATE_VARIABLES.md  UI_SPEC.md  VARIABLE_REVIEW_NOTES.md
scripts/: copy-templates-to-municipalities.mjs  migrate-flat-urls.ts  (+1 more)
(+4548 files in other folders)
